# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.79 2004/08/31 01:40:24 zhen Exp $

  30 Aug 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh, targets/grp/grp-chroot.sh:
  bugfixes for #61537 and #61779

  13 Aug 2004; John Davis <zhen@gentoo.org> +files/catalyst.1,
  modules/generic_stage_target.py, modules/livecd_stage2_target.py,
  modules/snapshot_target.py:
  bugfixes for #55014 (catalyst needs a manpage), #56581 (livecd-stage2 I/O
  enhancements), and #56773 (catalyst overlay for build root). Snapshotting
  time should also be improved due to a more efficient use of rsync. This commit will
  mark the portage version of catalyst-1.9.0.

  10 Aug 2004; John Davis <zhen@gentoo.org> arch/mips.py:
  add support for mips4n32 subarch. thanks to iluxa@gentoo.org. closes bug
  #59882.

  02 Aug 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py:
  fix for bug #58208

  02 Aug 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  bugfix #51086

  02 Aug 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
  +targets/stage1/build.py, -targets/stage1/build.sh,
  targets/stage1/stage1-chroot.sh, targets/stage1/stage1-preclean2-chroot.sh,
  targets/stage1/stage1.sh, targets/stage2/stage2-chroot.sh,
  targets/stage3/stage3-chroot.sh:
  applied patch from bug #58840. it should fix up things for uclibc stages and
  cascaded profiles. thanks to Mike Frysinger (vapier@gentoo.org) for the patch.

  21 Jul 2004; John Davis <zhen@gentoo.org> +livecd/files/gamecd-xinitrc,
  +livecd/files/gamecd.motd.txt, +livecd/files/generic-motd.txt,
  +livecd/files/livecd-bash_profile, +livecd/files/livecd-local.start,
  -livecd/files/livecd-rclocal, +livecd/files/minimal.motd.txt,
  -livecd/files/motd.txt, +livecd/files/universal.motd.txt,